# McFallLab

./: .gitignore  LICENSE  README.md  pyproject.toml
mcw_utils/cell2sentence/: FCNet.py  README.md  generate_prompts_1k.py  generate_prompts_1k_deg.py  generate_prompts_1k_deg_random.py  generate_prompts_1k_random.py  generate_prompts_500_stringdb.py  generate_prompts_vs_avg.py  generate_prompts_vs_avg_stringdb.py  prepare.py  run_c2s.py  run_modeling.py
mcw_utils/deg/: README.md  deg.py  deg_sweeny.py  move.py  quantify_genes.py  run.slurm
mcw_utils/donut_quant/: README.md  __init__.py  donut_quant.py  donut_quant_6_19_25.py  donut_quant_previous_pdac.py  dq.py  requirements.txt  run_example.ipynb
mcw_utils/donut_quant/example/: drug.csv  files.csv  (+3 more)
mcw_utils/kras_stoichiometry/: README.md  __init__.py  from pathlib import Path.py  measure.py  measure_nras_count.py  measure_parsef.py  move.py  requirements.txt  run.slurm  run_dist.slurm  run_parsef.slurm
mcw_utils/lyttle_study/: README.md  __init__.py  label.py  quantify_genes.py
mcw_utils/parsef/: __init__.py  distributions.py  gp.py  helper.py  isoform.py  model_alignment.py  parsef.py  read_bam_and_seq.py  sim.py
mcw_utils/rna-seq-pipeline/: run_align.slurm  run_align.slurm.template  run_rsem_quant.slurm
mcw_utils/rna_seq_pipeline/: README.md  move.py  move_sweeny.py  pipeline.py  rsem_quant.py  run.slurm.template  run_align.slurm.template  run_rsem_quant.slurm.template  save_results.py  star_align.py
mcw_utils/tempus_pdac/: __init__.py  _qc.py  _read.py  _util.py  report.html.template  tempus_pdac.py
(+2 files in other folders)
