# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]  # Build dependencies (setuptools & wheel are the most common)
build-backend = "setuptools.build_meta"  # The backend build tool (setuptools in this case)

[tool.setuptools]
packages = ["mcw_utils"]

[project]
name = "mcw_utils"
version = "0.1.0"
description = "Utilities for working at MCW"
authors = [
  { name = "Matthew Sochor", email = "msochor@mcw.edu" }
]
license = { text = "MIT" }
readme = "README.md"
dependencies = ["numpy", "pandas", "scipy", "matplotlib", "seaborn", "biopython", "pysam", "pymc", "memoization", "scikit-learn", "tqdm", "arviz"]
requires-python = ">=3.7"  # Specify the minimum Python version required

[project.scripts]
mcw_utils_star_align = "mcw_utils.rna_seq_pipeline.star_align:cli"
mwc_utils_rsem_quant = "mcw_utils.rna_seq_pipeline.rsem_quant:cli"